Updates to match working project

--- a/templates/awx/credentials.py.j2
+++ b/templates/awx/credentials.py.j2
@@ -5,9 +5,9 @@ DATABASES = {
         'NAME': "{{ awx_postgres_database }}",
         'USER': "{{ awx_postgres_username }}",
         'PASSWORD': "{{ awx_postgres_password }}",
-        'HOST': "{{ awx_postgres_hostname }}",
+        'HOST': "awx",
         'PORT': "{{ awx_postgres_port }}",
     }
 }
 
-BROADCAST_WEBSOCKET_SECRET = "{{ awx_broadcast_websocket_secret | b64encode }}"
+BROADCAST_WEBSOCKET_SECRET = "{{ awx_secret_key | b64encode }}"
